# PickNic

./: .eslintignore  .prettierrc.js  README.md  app.json  package-lock.json  package.json
api/: .dockerignore  .env.template  .gitignore  Dockerfile  OpenCV.py  RequestReturn.py  dataBaseHelper.py  migrate_db.py  pyproject.toml  requestReturn.py  seed_data.json  test.db  userData.db
api/api/: database.py  main.py
api/api/cruds/: auth.py  event.py  mobile.py  photo2user.py
api/api/dependencies/: auth.py
api/api/lib/: akaze.py  convert_colors.py  test.db  upload_image_to_s3.py
api/api/lib/auth/: auth_main.py  auth_utils.py  crud.py  database.py  main.py  schemas.py  token_utils.py
api/api/lib/r2/: create_s3_client.py  download_image_from_s3.py  upload_image_to_s3.py
api/api/models/: auth.py  database_models.py  mobile.py
api/api/routers/: auth.py  event.py  mobile.py  picture2item.py
api/api/routers/events/: match.py
api/api/schemes/: auth.py  event.py  mobile.py  photo2user.py
api/openCV/: openCV.py
api/sqlApp/routers/: users.py
api/testfunc/: checkacc.py  getPhoto.py
dbInittool/: DbInit.py  Redme.md  dataBaseInit.js
dbInittool/excels/: Badge.xlsx  Material.xlsx  MaterialPhotoRelation.xlsx  Meal.xlsx  MealStatus.xlsx  Photo.xlsx  RecipeDetail.xlsx  User.xlsx
nativeApp/: .env  Dockerfile  README.md  app.json  package-lock.json  package.json
nativeApp/assets/: dev-cooking.json  material_animation_3.json
nativeApp/src/: App.js
src/: App-camera.js  App.js  DataBaseHander.js
src/components/: CameraButton.js
src/lib/: dataBaseHander.js  dataBaseHelper.js  databaseQueryText.js
src/screens/: BadgeScreen.js  (+4 more)
web/: .env.template  Dockerfile  package-lock.json  package.json  tsconfig.json
(+121 files in other folders)
