[tool.poetry]
name = "api"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.111.0"
passlib = "^1.7.4"
sqlalchemy = "^2.0.31"
pydantic = "^2.7.4"
python-jose = "^3.3.0"
datetime = "^5.5"
bcrypt = "^4.1.3"
opencv-python = "^4.10.0.84"
aiofiles = "^24.1.0"
sqlalchemyseed = "^2.0.0"


[tool.poetry.group.dev.dependencies]
uvicorn = "^0.30.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
